tests-e2e/tests/package_manager/snapshots/package_manager__cli__run_requires_separator.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: '[-- ARGUMENTS]…' can only be given after '--'

Usage: purescript-alexandrite run [FLAGS] [-- ARGUMENTS]…

For more information, try '--help'.
