tests-e2e/tests/package_manager/snapshots/package_manager__cli__test_requires_separator.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [arg_requires_double_dash] · command line:1:1
  •
  │
  • '[-- ARGUMENTS]…' can only be given after '--'
  │
  │ Usage: iris test [FLAGS] [-- ARGUMENTS]…
  │
  │ For more information, try '--help'.
  │
  │   iris test argument
  │   ╰─────────────────
  •
