tests-e2e/tests/package_manager/snapshots/package_manager__cli__unknown_build_flag.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [unknown_flag] · command line:1:12
  •
  │
  • unexpected argument '--unknown' found
  │
  │ Usage: iris build [FLAGS]
  │
  │ For more information, try '--help'.
  │
  │   iris build --unknown
  │              ╰────────
  •
