tests-e2e/tests/package_manager/snapshots/package_manager__cli__unknown_docs_flag.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: unexpected argument '--unknown' found

Usage: purescript-alexandrite docs [FLAGS] [SUBCOMMAND]

For more information, try '--help'.
